--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="user_name">Arwan Muhtada</string>
     <string name="user_email">ryskrnzo@gmail.com</string>
     <string name="user_description">Hi everyone! My name is Arwan Muhtada. \nI am part of the Bangkit Academy 2024 By Google, GoTo, Tokopedia, Traveloka - Android Learning Path.\n\nIt is my project for Submission Akhir Aplikasi Android Sederhana, Belajar Membuat Aplikasi Android untuk Pemula - Dicoding Course.</string>
+    <string name="splash_icon">splash icon</string>
+    <string name="shoes_image">Shoes image</string>
 
     <string-array name="data_name">
         <item>Nike Air Max 270</item>
